--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A basic click contest.",
   "main": "index.js",
   "dependencies": {
-    "johnny-five": "^0.11.3"
+    "johnny-five": "^0.11.3",
+    "socket.io": "^2.0.3",
+    "socketio-wildcard": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
